--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -16,6 +16,10 @@ h4{
     color: #8c8c8c;
 }
 
+h6{
+    color: #8c8c8c;
+}
+
 i{
     color: #ffffff;
 }
@@ -234,4 +238,30 @@ i{
 
 .b3 {
     border: 2px solid green;
+}
+
+.secao-ul-contas::-webkit-scrollbar{
+    width: 4px;
+}
+
+.secao-ul-contas::-webkit-scrollbar-track{
+    background: #695CFE;
+}
+
+.secao-ul-contas::-webkit-scrollbar-thumb{
+    background: #bebebe;
+    border-radius: 6px;
+}
+
+.secao-ul-cartoes::-webkit-scrollbar{
+    width: 4px;
+}
+
+.secao-ul-cartoes::-webkit-scrollbar-track{
+    background: #695CFE;
+}
+
+.secao-ul-cartoes::-webkit-scrollbar-thumb{
+    background: #bebebe;
+    border-radius: 6px;
 }
