--- a/src/views/home.html
+++ b/src/views/home.html
@@ -304,8 +304,9 @@
                         <h4>Gastos do mês atual</h4>
                         <div class="row">
                             <div class="col-6">
-                                <ul class="lista-itens px-2 secao-ul-cartoes">
-                                    <li class="item">
+                                <ul class="lista-itens px-2 secao-ul-cartoes" id="lista_gastos_mes_atual">
+                                    <h6 class="text-center" id="sem_dados_gastos_mes_atual">Nenhum dado encontrado</h6>
+                                    <!-- <li class="item">
                                         <div class="col-3 mr">
                                             <i class='bx bxs-cart item-icon mercado '></i>
                                         </div>
@@ -322,7 +323,7 @@
                                             <span>Shopping</span>
                                             <span class="fw-light mx-1">16,6%</span>
                                         </div>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>
 
@@ -348,8 +349,9 @@
                 <div class="col-6">
                     <h4>Contas a receber</h4>
                     <span class="d-block display-1 text-center fs-5 text-secondary my-3">Este mês</span>
-                    <ul class="lista-itens secao-ul-contas contas-a-receber">
-                        <li class="item">
+                    <ul class="lista-itens secao-ul-contas contas-a-receber" id="lista_contas_a_receber_este_mes">
+                        <h6 class="text-center" id="sem_dados_receber_mes_atual">Nenhum dado encontrado</h6>
+                        <!-- <li class="item">
                             <div class="col-1">
                                 <i class='bx bx-dollar item-icon'></i>
                             </div>
@@ -364,13 +366,14 @@
                             <div class="col-3 text-end">
                                 <span>R$250</span>
                             </div>
-                        </li>
+                        </li> -->
                     </ul>
 
                     <span class="d-block display-1 text-center fs-5 text-secondary my-3">Próximas</span>
 
-                    <ul class="lista-itens secao-ul-contas contas-a-receber">
-                        <li class="item">
+                    <ul class="lista-itens secao-ul-contas contas-a-receber" id="lista_contas_a_receber_proximas">
+                        <h6 class="text-center" id="sem_dados_receber_proximos">Nenhum dado encontrado</h6>
+                        <!-- <li class="item">
                             <div class="col-1">
                                 <i class='bx bxs-bar-chart-alt-2 item-icon'></i>
                             </div>
@@ -402,32 +405,33 @@
                             <div class="col-3 text-end">
                                 <span>R$300</span>
                             </div>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
 
-                <div class="col-6 fs-6 balanco-mes">
+                <div class="col-6 fs-6 balanco-mes" id="balanco_do_mes">
                     <h4>Balanço do mês</h4>
-                    <div class="row my-3">
+
+                    <!-- <div class="row my-3">
                         <span>
                             Receita - <small>R$1700</small>
                             <div class="balanco-porcentagem receita d-flex align-items-center justify-content-center">
                                 <small>75%</small>
                             </div>
                         </span>
-                    </div>
-                    <div class="row">
+                    </div> -->
+                    <!-- <div class="row">
                         <span>
                             Despesa - <small>R$800</small>
                             <div class="balanco-porcentagem despesa d-flex align-items-center justify-content-center">
                                 <small>25%</small>
                             </div>
                         </span>
-                    </div>
-                    <div class="row my-4">
+                    </div> -->
+                    <!-- <div class="row my-4">
                         <h4 style="color: #666666;">Resultado:</h4>
                         <span class="fs-4 text-success fw-light">R$900</span>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <!-- ==== FIM TERCEIRA ROW ===== -->
@@ -732,17 +736,17 @@
     <!-- ==== FIM DO INÍCIO DO CONTEÚDO PRINCIPAL ==== -->
     
     <script src="../js/sidebar.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
-    <script src="../js/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
-        crossorigin="anonymous"></script>
+    integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+    crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-        integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-        crossorigin="anonymous"></script>
+    integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+    crossorigin="anonymous"></script>
     <script src="js/functions.js"></script>
     <script src="js/home.js"></script>
     <script src="../js/script.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
+    <script src="../js/chart.js"></script>
 
 </body>
 
