--- a/src/views/lancamentos.html
+++ b/src/views/lancamentos.html
@@ -253,8 +253,8 @@
                                     <div class="col-4">
                                         <label for="tipo">Tipo</label>
                                         <select class="form-control" id="dia_fechamento">
-                                            <option>Receita</option>
-                                            <option>Despesa</option>
+                                            <option value="1">Receita</option>
+                                            <option value="0">Despesa</option>
                                         </select>
                                     </div>
                                 </div>
@@ -284,57 +284,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <!-- textarea -->
-                                <div class="form-group">
-                                    <label for="mensagem">Observação (opcional)</label>
-                                    <textarea class="form-control" id="mensagem" rows="3"></textarea>
-                                </div>
 
-                                <div class="form-group">
-                                    <div class="row my-3 botao-repetir" onclick="repetir()">
-                                        <div class="col-1">
-                                            <i class='bx bx-repeat repetir'></i>
-                                        </div>
-                                        <div class="col d-flex align-items-center">
-                                            <span class="fs-6 fw-light" style="color: green">repetir</span>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="form-group mx-3 d-none" id="opcoes_repeticao">
-                                    <div class="form-check">
-                                        <div class="row">
-                                            <div class="col-4">
-                                                <input type="radio" class="form-check-input" id="radio1" name="optradio"
-                                                    value="option1" checked>parcelado em:
-
-                                            </div>
-                                            <div class="col-3">
-                                                <select class="form-control" id="valor">
-                                                    <option></option>
-                                                    <option></option>
-                                                    <option></option>
-                                                    <option>...</option>
-                                                </select>
-                                            </div>
-                                            <div class="col-5">
-                                                <select class="form-control" id="escala">
-                                                    <option></option>
-                                                    <option></option>
-                                                    <option></option>
-                                                    <option>...</option>
-                                                </select>
-                                            </div>
-
-                                        </div>
-                                        <label class="form-check-label" for="radio1"></label>
-                                    </div>
-                                    <div class="form-check">
-                                        <input type="radio" class="form-check-input" id="radio2" name="optradio"
-                                            value="option2">receita fixa
-                                        <label class="form-check-label" for="radio2"></label>
-                                    </div>
-                                </div>
                                 </div>
                             </div>
 
