tela de relatorios

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -327,9 +327,9 @@
                                 </ul>
                             </div>
 
-                            <div class="col-6">
+                            <!-- <div class="col-6">
                                 <canvas id="myChart"></canvas>
-                            </div>
+                            </div> -->
                         </div>
 
                         <div class="row">
