--- a/src/views/relatorios.html
+++ b/src/views/relatorios.html
@@ -136,14 +136,14 @@
                             <th scope="col" class="fw-light p-0">Resultado</th>
                           </tr>
                         </thead>
-                        <tbody>
-                          <tr>
+                        <tbody id="valores_relatorio">
+                          <!-- <tr>
                             <th scope="row">01/01/2023</th>
                             <td class="entrada">R$0,00</td>
                             <td class="saida">R$0,00</td>
                             <td>R$0,00</td>
-                          </tr>
-                          <tr>
+                          </tr> -->
+                          <!-- <tr>
                             <th scope="row">02/01/2023</th>
                             <td class="entrada">R$0,00</td>
                             <td class="saida">R$0,00</td>
@@ -316,7 +316,7 @@
                             <td class="entrada">R$0,00</td>
                             <td class="saida">R$0,00</td>
                             <td>R$0,00</td>
-                          </tr>
+                          </tr> -->
                         </tbody>
                       </table>
                 </div>
@@ -340,7 +340,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
-        <script>
+      <script src="js/functions.js"></script>
+    <script src="/js/relatorios.js"></script>
+        <!-- <script>
           fetch("/auth/profile", { method: "get" })
               .then(response => response.text())
               .then(data => {
@@ -358,7 +360,7 @@
               .catch(error => {
                   console.log("Ocorreu um erro:", error);
               });
-      </script>
+      </script> -->
 </body>
 
 </html>
