--- a/src/views/home.html
+++ b/src/views/home.html
@@ -332,14 +332,14 @@
                             </div> -->
                         </div>
 
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="col-6"></div>
                             <div class="col-6 my-3 text-center">
                                 <a href="/relatorios" class="btn btn-sm btn-secondary w-75">
                                     Relatório
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
