--- a/src/views/perfil.html
+++ b/src/views/perfil.html
@@ -60,12 +60,12 @@
                             <span class="text nav-text">Perfil</span>
                         </a>
                     </li>
-                    <li class="nav-link">
+                    <!-- <li class="nav-link">
                         <a href="/notificacoes">
                             <i class='bx bx-bell icon'></i>
                             <span class="text nav-text">Notificações</span>
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
 
